# gono

./: .gitignore  LICENSE  README.md  config.sk
examples/: funcs.gn  hello.gn  ifs.gn  loops.gn
libs/: stdlib.gn
src/: lexer_parser.sk  main.sk
